added image carousel feature.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
   <meta property="fb:app_id" content="{{ site.facebook_APPID }}"/>
   
   {%- include twitter_card.html -%}
+  {%- include slider_styles.html -%}
 </head>
