new post and revised urls

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <meta property="og:image:height" content="403"/>
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/images.css" | relative_url }}">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   {%- feed_meta -%}
   <meta property="fb:app_id" content="{{ site.facebook_APPID }}"/>
