--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
           
           <h3>
             <a class="post-link" href="{{ post.url | relative_url }}">
-              {{ post.title | escape }}
+              {{ post.summary | escape }}
             </a>
           </h3>
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
