--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -1,5 +1,5 @@
-{% if page.image %}
-<meta property="og:image" content="{{ page.image | prepend: site.url }}" />
+{% if page.facebook_link_image %}
+<meta property="og:image" content="{{ page.facebook_link_image | prepend: site.url }}" />
 {% endif %}
 <meta property="og:title" content="{{ page.title }}" />
 <meta property="og:url" content="{{page.url | prepend: site.url }}" />
