--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,19 @@
+{% if site.logo contains '://' %}
+  {% assign site_logo = site.logo %}
+{% else %}
+  {% assign site_logo = site.logo | relative_url %}
+{% endif %}
+
 <header class="site-header">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      {% if site.logo %}<img src="{{ site_logo }}" alt="{{ site.title | escape }}" class="site-logo">{% endif %}
+      
+    </a>
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
