added Patreon button

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,7 @@ layout: default
   <div class="post-content">
     {{ content }}
     {%- include share_bar.html -%}
+    <a href="https://www.patreon.com/bePatron?u=27589523" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
   </div>
   
 </article>
