--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
     {%- include share_bar.html -%}
+    <a href="https://www.patreon.com/bePatron?u=27589523" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
   </div>
 
   <div>
