--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,6 +42,7 @@ layout: default
     </ul>
 
     <p class="feed-subscribe"><svg class="svg-icon orange"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg><a href="{{ "/feed.xml" | relative_url }}">Subscribe</a></p>
+    <a href="https://www.patreon.com/bePatron?u=27589523" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
   {%- endif -%}
 
 </div>
